// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message closable 1`] = `
<div
  className="za-message za-message--primary"
  onClick={[Function]}
>
  <div
    className="za-message__header"
  />
  <div
    className="za-message__body"
  >
    foo
  </div>
  <div
    className="za-message__footer"
  >
    <Icon
      className=""
      onClick={[Function]}
      prefixCls="za-icon"
      size="md"
      theme="default"
      type="wrong"
    />
  </div>
</div>
`;

exports[`Message hasArrow 1`] = `
<div
  className="za-message za-message--primary"
  onClick={[Function]}
>
  <div
    className="za-message__header"
  />
  <div
    className="za-message__body"
  >
    foo
  </div>
  <div
    className="za-message__footer"
  >
    <Icon
      className=""
      prefixCls="za-icon"
      size="md"
      theme="default"
      type="arrow-right"
    />
  </div>
</div>
`;

exports[`Message icon 1`] = `
<div
  class="za-message za-message--primary"
>
  <div
    class="za-message__header"
  >
    <div
      class="za-message__icon"
    >
      <img
        alt=""
        src="https://zhongantecheng.github.io/zarm/images/state.18e78939.png"
      />
    </div>
  </div>
  <div
    class="za-message__body"
  >
    foo
  </div>
</div>
`;

exports[`Message renders correctly 1`] = `
<div
  class="za-message za-message--primary"
>
  <div
    class="za-message__header"
  />
  <div
    class="za-message__body"
  >
    foo
  </div>
</div>
`;

exports[`Message theme 1`] = `
<div
  class="za-message za-message--danger"
>
  <div
    class="za-message__header"
  />
  <div
    class="za-message__body"
  >
    foo
  </div>
</div>
`;
